--- a/platforms/opencl/CMakeLists.txt
+++ b/platforms/opencl/CMakeLists.txt
@@ -72,5 +72,6 @@ IF (APPLE)
     INSTALL(CODE "EXECUTE_PROCESS(COMMAND install_name_tool -add_rpath @loader_path/.. ${CMAKE_INSTALL_PREFIX}/lib/plugins/lib${SHARED_TARGET}.dylib)")
 ENDIF (APPLE)
 
-SUBDIRS (tests)
-
+IF(BUILD_TESTING)
+    SUBDIRS (tests)
+ENDIF()
